--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-001</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
 
+<body class="raleway-normal">
+    <header>
+        <nav>
+            <h3 class="nav-title">LOGO</h3>
+            <ul>
+                <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
@@ -17,4 +28,5 @@
 
     </footer>
 </body>
+
 </html>
