added banner section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                 <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
         </nav>
+        <!-- banner section start -->
+        <div class="banner">
+            <div class="banner-content">
+                <h4>Cool Dark UI Template for Webflow Agencies!</h4>
+            </div>
+            <button class="btn-primary">Stay Focused</button>
+        </div>
+        <!-- banner section end -->
     </header>
     <main>
 
