added action section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,33 @@
         <!-- banner section end -->
     </header>
     <main>
+        <!-- action section start -->
+        <section class="action">
+            <div class="action-container">
+                <h3 class="action-title">See It in Action</h3>
+                <p class="action-sub-title">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <img class="action-image" src="Assets/wc-mini.png" alt="">
+        </section>
+        <!-- action section end -->
+         <!-- productive users section start -->
+         <section class="productive">
+            <h3 class="productive-title">Joined Thousands of Productive Users</h3>
+            <div class="productive-content">
+                <h2 class="productive-sub-title">50K</h2>
+                <p class="productive-description">Active Users</p>
+            </div>
+            <div class="productive-content">
+                <h2 class="productive-sub-title">2M+</h2>
+                <p class="productive-description">Focus Sessions</p>
+            </div>
+            <div class="productive-content">
+                <h2 class="productive-sub-title">95%</h2>
+                <p class="productive-description">Satisfaction Rate</p>
+            </div>
 
+         </section>
     </main>
     <footer>
 
