added productive section

--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
             <img class="action-image" src="Assets/wc-mini.png" alt="">
         </section>
         <!-- action section end -->
-         <!-- productive users section start -->
-         <section class="productive">
+        <!-- productive users section start -->
+        <section class="productive">
             <h3 class="productive-title">Joined Thousands of Productive Users</h3>
-            <div class="productive-content">
-                <h2 class="productive-sub-title">50K</h2>
-                <p class="productive-description">Active Users</p>
-            </div>
-            <div class="productive-content">
-                <h2 class="productive-sub-title">2M+</h2>
-                <p class="productive-description">Focus Sessions</p>
-            </div>
-            <div class="productive-content">
-                <h2 class="productive-sub-title">95%</h2>
-                <p class="productive-description">Satisfaction Rate</p>
+            <div class="productive-users-view">
+                <div class="productive-content">
+                    <h2 class="productive-sub-title">50K</h2>
+                    <p class="productive-description">Active Users</p>
+                </div>
+                <div class="productive-content">
+                    <h2 class="productive-sub-title">2M+</h2>
+                    <p class="productive-description">Focus Sessions</p>
+                </div>
+                <div class="productive-content">
+                    <h2 class="productive-sub-title">95%</h2>
+                    <p class="productive-description">Satisfaction Rate</p>
+                </div>
             </div>
 
-         </section>
+        </section>
     </main>
     <footer>
 
