--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <!-- action section end -->
         <!-- productive users section start -->
-        <section class="productive">
+        <section class="productive-bg">
             <h3 class="productive-title">Joined Thousands of Productive Users</h3>
             <div class="productive-users-view">
                 <div class="productive-content">
@@ -57,8 +57,22 @@
                     <p class="productive-description">Satisfaction Rate</p>
                 </div>
             </div>
-
         </section>
+        <!-- productive users section end -->
+         <!-- Let’s Get In Touch Section Start -->
+        <section class="get-touch">
+            <h1 class="get-touch-title">Let’s Get In Touch</h1>
+            <form>
+                <label for="email">Email</label>
+                <input type="email" name="" id="email" placeholder="example@email.com">
+                <label for="name">Name</label>
+                <input type="text" name="" id="name" placeholder="full name">
+                <label for="message">Message</label>
+                <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
+                <button class="btn-primary">Get in Touch</button>            
+            </form>
+        </section>
+
     </main>
     <footer>
 
