modify get touch section

--- a/index.html
+++ b/index.html
@@ -59,18 +59,22 @@
             </div>
         </section>
         <!-- productive users section end -->
-         <!-- Let’s Get In Touch Section Start -->
+        <!-- Let’s Get In Touch Section Start -->
         <section class="get-touch">
-            <h1 class="get-touch-title">Let’s Get In Touch</h1>
-            <form>
-                <label for="email">Email</label>
-                <input type="email" name="" id="email" placeholder="example@email.com">
-                <label for="name">Name</label>
-                <input type="text" name="" id="name" placeholder="full name">
-                <label for="message">Message</label>
-                <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
-                <button class="btn-primary">Get in Touch</button>            
-            </form>
+            <div class="get-touch-column">
+                <h1 class="get-touch-title">Let’s Get In Touch</h1>
+            </div>
+            <div class="get-touch-column">
+                <form>
+                    <label for="email">Email</label>
+                    <input type="email" name="" id="email" placeholder="example@email.com">
+                    <label for="name">Name</label>
+                    <input type="text" name="" id="name" placeholder="full name">
+                    <label for="message">Message</label>
+                    <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
+                    <button class="btn-primary">Get in Touch</button>
+                </form>
+            </div>
         </section>
 
     </main>
