added footer section

--- a/index.html
+++ b/index.html
@@ -72,14 +72,26 @@
                     <input type="text" name="" id="name" placeholder="full name">
                     <label for="message">Message</label>
                     <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
-                    <button class="btn-primary">Get in Touch</button>
+                    <button class="btn-primary btn-touch">Get in Touch</button>
                 </form>
             </div>
         </section>
-
+        <!-- Let’s Get In Touch Section End -->
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div class="footer-content">
+                <h1 class="footer-title">LOGO</h1>
+                <p class="footer-sub-title">Ready to elevate your online presence? Contact us today to discuss your
+                    project and discover how we can bring your vision to life.</p>
+            </div>
+            <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">How it works</a></li>
+                    <li><a href="">Services</a></li>
+            </ul>
+        </section>
     </footer>
 </body>
 
