added users feedback section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body class="raleway-normal">
     <header>
         <nav>
-            <h3 class="nav-title">LOGO</h3>
+            <h3 class="nav-title inter-normal">LOGO</h3>
             <ul>
                 <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
@@ -25,7 +30,7 @@
             <div class="banner-content">
                 <h4>Cool Dark UI Template for Webflow Agencies!</h4>
             </div>
-            <button class="btn-primary">Stay Focused</button>
+            <button class="btn-primary banner-btn-margin">Stay Focused</button>
         </div>
         <!-- banner section end -->
     </header>
@@ -45,26 +50,87 @@
             <h3 class="productive-title">Joined Thousands of Productive Users</h3>
             <div class="productive-users-view">
                 <div class="productive-content">
-                    <h2 class="productive-sub-title">50K</h2>
-                    <p class="productive-description">Active Users</p>
+                    <h2 class="productive-sub-title inter-normal">50K</h2>
+                    <p class="productive-description inter-normal">Active Users</p>
                 </div>
                 <div class="productive-content">
-                    <h2 class="productive-sub-title">2M+</h2>
-                    <p class="productive-description">Focus Sessions</p>
+                    <h2 class="productive-sub-title inter-normal">2M+</h2>
+                    <p class="productive-description inter-normal">Focus Sessions</p>
                 </div>
                 <div class="productive-content">
-                    <h2 class="productive-sub-title">95%</h2>
-                    <p class="productive-description">Satisfaction Rate</p>
+                    <h2 class="productive-sub-title inter-normal">95%</h2>
+                    <p class="productive-description inter-normal">Satisfaction Rate</p>
                 </div>
             </div>
         </section>
         <!-- productive users section end -->
+        <!-- Users Review Start -->
+        <section class="review">
+            <h3 class="review-title">What our users say</h3>
+            <div class="review-container">
+                <div class="review-coloum">
+                    <div class="review-icon">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-sub-title">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer-name">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h5 class="reviewer-name-title">Amelia Ivy</h5>
+                            <p class="reviewer-name-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-coloum">
+                    <div class="review-icon">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-sub-title">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer-name">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h5 class="reviewer-name-title">Evelyn Freya</h5>
+                            <p class="reviewer-name-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-coloum">
+                    <div class="review-icon">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-sub-title">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer-name">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h5 class="reviewer-name-title">Olivia Ava</h5>
+                            <p class="reviewer-name-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Users Review End -->
         <!-- Let’s Get In Touch Section Start -->
         <section class="get-touch">
             <div class="get-touch-column">
                 <h1 class="get-touch-title">Let’s Get In Touch</h1>
             </div>
-            <div class="get-touch-column">
+            <div class="get-touch-column inter-normal">
                 <form>
                     <label for="email">Email</label>
                     <input type="email" name="" id="email" placeholder="example@email.com">
@@ -72,7 +138,7 @@
                     <input type="text" name="" id="name" placeholder="full name">
                     <label for="message">Message</label>
                     <textarea name="" id="message" cols="30" rows="10" placeholder="write your message...."></textarea>
-                    <button class="btn-primary btn-touch">Get in Touch</button>
+                    <button class="btn-primary btn-touch raleway-normal">Get in Touch</button>
                 </form>
             </div>
         </section>
@@ -81,15 +147,15 @@
     <footer>
         <section class="footer-container">
             <div class="footer-content">
-                <h1 class="footer-title">LOGO</h1>
+                <h1 class="footer-title inter-normal">LOGO</h1>
                 <p class="footer-sub-title">Ready to elevate your online presence? Contact us today to discuss your
                     project and discover how we can bring your vision to life.</p>
             </div>
             <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">How it works</a></li>
-                    <li><a href="">Services</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How it works</a></li>
+                <li><a href="">Services</a></li>
             </ul>
         </section>
     </footer>
