added multiple font

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 
 <body class="raleway-normal">
     <header>
+        <!-- nav section start -->
         <nav>
             <h3 class="nav-title inter-normal">LOGO</h3>
             <ul>
                 <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
         </nav>
+        <!-- nav section end -->
         <!-- banner section start -->
         <div class="banner">
             <div class="banner-content">
@@ -144,6 +146,7 @@
         </section>
         <!-- Let’s Get In Touch Section End -->
     </main>
+    <!-- footer section start -->
     <footer>
         <section class="footer-container">
             <div class="footer-content">
@@ -159,6 +162,6 @@
             </ul>
         </section>
     </footer>
+    <!-- footer section end -->
 </body>
-
 </html>
